objects/Studies__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This field is representing the current status of the study.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Participant_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Participant Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Study_Id__c</fullName>
        <label>Study Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Studies</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Studies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>